# VIA-Fall-Detection

./: .gitignore  Data Processing.ipynb  Fall_Detection.py  GUI.py  M1_unitTest.py  Model-1.ipynb  Model-2.py  README.md  Unit_Test.py  blur.py  c-Model-2.py  c-default.txt  c-falling.txt  c.ipynb  defaultDiff.txt  defaultDiff2.txt  demo_pose_1.MOV  diff2.txt  diffM2Training.ipynb  diffdiff_Fall_Detection.py  difference.txt  eight_Fall_Detection.py  fallDiff2.txt  falling.txt  fallingDiff.txt  j-default.txt  j-falling.txt  j.ipynb  k-m1optimize.ipynb  k_datagenerator.ipynb  m1_optimized_Fall_Detection.py  main.py  main_GUI.py  main_copy.py  model.tflite  model1_new.tflite  model2.tflite  model2_new.tflite  model2_quant  newM2Training.ipynb  (+25 more)
Falldet_train/Different_version_Training/: k.ipynb
Falldet_train/best_models_dla/: m1_quant.dla  m2_quant.dla
Falldet_train/best_models_tflite/: m1_quant.tflite  m2_quant.tflite
K-optimized1-training/: k-m1optimize.ipynb  k_m1_quant_v4.tflite  k_m1_quant_v5.tflite  k_m1_quant_v6.tflite  k_m1_quant_v7.tflite  k_m2_quant_v5.tflite  k_m2_quant_v6a.tflite  k_m2_quant_v6b.tflite  k_m2_quant_v7a.tflite  k_m2_quant_v7b.tflite  k_m2_quant_v7c.tflite  k_m2_quant_v8b.tflite  k_m2_quant_v8c.tflite  k_m2_quant_v8d.tflite  kmodel2_quant.tflite  koptimized_model1.tflite  model1_output_default.txt  model1_output_default_test.txt  model1_output_fall.txt  model1_output_fall_test.txt  moving.txt  still.txt  test_optimized_m2_output.txt  updated_kmodel2.tflite  updated_kmodel2_quant.tflite  updated_koptimized_model1.tflite
K-optimized1-training/koptimized_model1/: keras_metadata.pb  saved_model.pb
K-optimized1-training/ktest_model1/: keras_metadata.pb  saved_model.pb
K-optimized1-training/model2/: keras_metadata.pb  saved_model.pb
K-optimized1-training/tmp/: checkpoints.data-00000-of-00001  checkpoints.index
Model 2/: Model-2.py
Neuropl/: buildfiles.sh  neuropl.h  runtime.cpp  unitTestObject.cpp  unitTestPose.cpp  vabBuild.sh
c-tf_sample/: clarencemadeafile.py  labels.txt
c_model2_export/: saved_model.pb
c_model2_export/variables/: variables.data-00000-of-00001  variables.index
compiler_and_runtime/: CMakeLists.txt  linux_build.sh  linux_build_32.sh  ndk_build.sh  push.bat  readme.txt
compiler_and_runtime/Neuropl/: GUIupdated  GUIupdated.py  Unit_Test.py  boost.cpp  boostClass.cpp  boostClass.h  boostTest.py  main.cpp  main2.cpp  neuropl.cpp  neuropl.h  runtime.cpp  test  testGui.cpp  testing  unitTestObject.cpp  unitTestPose.cpp
compiler_and_runtime/api/compiler/: CompilerAPI.h  sample.cpp
compiler_and_runtime/api/runtime/: RuntimeAPI.h  runtime.cpp
compiler_and_runtime/input/: process_input_image.py
compiler_and_runtime/ndk_build/: compiler  runtime
compiler_and_runtime/yocto_build/: CMakeCache.txt  Makefile  cmake_install.cmake  compiler  runtime
datasets/: jess_IMG_0485.MOV
datasets/model1_vids/: resized_IMG_0484.MOV  resized_IMG_0485.MOV  resized_IMG_1614.MOV
datasets/model2_data/: default.txt  falling.txt
datasets/model2_vids/: resized_jess_jump.MOV  resized_jess_pickup.MOV  resized_jess_run1.MOV  resized_jess_walk4.MOV
datasets/tensorflow/: clarencemadeafile.py  model.tflite
diff_m2/variables/: variables.data-00000-of-00001
model2/: keras_metadata.pb  saved_model.pb
model2/variables/: variables.data-00000-of-00001  variables.index
model2_new/: saved_model.pb
model2_vids/: jess_pickup.MOV
model2_vids/resized/: resized_jess_run2.MOV  resized_jess_run3.MOV  resized_jess_run4.MOV  resized_jess_walk1.MOV  resized_jess_walk2.MOV  resized_jess_walk3.MOV
model_checkpoint/: .data-00000-of-00001  .index
new_m2/: keras_metadata.pb  saved_model.pb
new_m2/variables/: variables.data-00000-of-00001  variables.index
new_model2/: keras_metadata.pb  saved_model.pb
new_model2/variables/: variables.data-00000-of-00001  variables.index
object_detection_mobilessd/: 0_python_convert_input_2_bin.bat  1_P_build.sh  2_push_model.bat  3_push_input.bat  4_run.bat  CMakeLists.txt  Mobilenet_ssd_demo.cpp  NeuroPilotTFLiteShim.h  ReadMe.txt  TFLib.cpp  TFLib.h  pascal.h  ssd.cpp  ssd.h
object_detection_mobilessd/include/: NeuroPilotTFLiteShim.h
object_detection_mobilessd/input/: Convert2ModelInput.py  Thumbs.db
object_detection_mobilessd/model/: Thumbs.db
open_pose_demo/: .gitignore  build.gradle
open_pose_demo/app/: build.gradle  local.properties
pytorch ml/: via-ml.ipynb
pytorch ml/.ipynb_checkpoints/: via-ml-checkpoint.ipynb
release/: train.py
s-model2/: keras_metadata.pb  saved_model.pb
s-model2/variables/: variables.data-00000-of-00001  variables.index
s-pytorch_sample/: via-ml.py
s-pytorch_sample/.ipynb_checkpoints/: P2 Machine learning ver 4-checkpoint.ipynb
tflite_models/: diffdiff_model2_quant.tflite  model.tflite  new_m1.tflite  new_m2.tflite  openpose_mobilenetv0.75_quant_1x368x368x3.tflite
training/: j.ipynb  m1_quant.tflite  m1_quant_v2.tflite  m1_quant_v5.tflite  m1_quant_v6.tflite  m2_quant.tflite  m2_quant_v2.tflite  m2_quant_v3.tflite  m2_quant_v4.tflite  m2_quant_v5.tflite  m2_quant_v6_15.tflite  model2data_augmented.txt  model2data_test.txt  model2labels_augmented.txt  s-falling.txt  s.ipynb
training/models/: m1_quant.tflite  m1_quant_v3.tflite  m1_quant_v4.tflite  m1_quant_v5.tflite  m1_quant_v7.tflite  m1_quant_v8.tflite  (+5 more)
(+203 files in other folders)
